Fixed the Scrollbar for the Sidebar Message Container

--- a/src/client/src/public/css/style.css
+++ b/src/client/src/public/css/style.css
@@ -34,10 +34,18 @@ body {
   transition: all 0.3s ease-in-out;
 }
 
+.message-container::-webkit-scrollbar {
+  width: 4px;
+}
+
 ::-webkit-scrollbar-track {
   background-color: white;
   border-radius: 0px;
   transition: all 0.3s ease-in-out;
+}
+
+.message-container::-webkit-scrollbar-track {
+  background-color: var(--primary-color-2);
 }
 
 ::-webkit-scrollbar-thumb {
@@ -46,6 +54,10 @@ body {
   border: 2px solid transparent;
   background-clip: content-box;
   transition: all 0.3s ease-in-out;
+}
+
+.message-container::-webkit-scrollbar-thumb {
+  background: white;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -394,7 +406,7 @@ button:hover {
 
 #sidebar-panel .message-container {
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   direction: ltr;
 }
 
